--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "@google-cloud/vision": "^0.12.0",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -40,6 +39,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "reactfire": "^1.0.0",
+    "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.15.6",
