--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.7",
     "react-redux": "^5.0.6",
     "reactfire": "^1.0.0",
     "recharts": "^1.0.0-beta.9",
